--- a/PAGES/11b_multithread_intro/index.html
+++ b/PAGES/11b_multithread_intro/index.html
@@ -2851,7 +2851,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Nature of Computations</h2></p>
-<p>Operations can be broadly classified in terms of their data dependencies. A <span style="color: rgb(62, 121, 180);"><strong>dependent operation</strong></span> is one whose outcome is influenced by the result of another operation. In such cases, the order of execution is critical, because changing the sequence can alter the final outcome. In contrast, an <span style="color: rgb(62, 121, 180);"><strong>independent operation</strong></span> produces the same result, regardless of the order in which it&#39;s executed relative to other operations. In other words, its computation doesn&#39;t rely on the outputs of either preceding or subsequent operations.</p>
+<p>Operations can be broadly classified in terms of their data dependencies. A <span style="color: rgb(62, 121, 180);"><strong>dependent operation</strong></span> is one whose outcome is influenced by the result of another operation. In such cases, the order of execution is critical, because changing the sequence can alter the final outcome. In contrast, an <span style="color: rgb(62, 121, 180);"><strong>independent operation</strong></span> produces the same result, regardless of the order in which it&#39;s executed relative to other operations.</p>
 <p>The following code gives rise to a dependent or independent operation, based on which values operation B sums.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
